align sidebar correctly

--- a/static/css/pure.css
+++ b/static/css/pure.css
@@ -36,7 +36,7 @@ pre {
     top: 0;
     bottom: 0;
     width: 25%;
-    margin-left: -25%;
+    margin-left: -26%;
 }
 
 .cover-img {
